force-app/main/default/objects/Benchmarking_Firm__c/Benchmarking_Firm__c.object-meta.xml
<CustomObject>
    <label>Benchmarking Firm</label>
    <pluralLabel>Benchmarking Firms</pluralLabel>
    <nameField>
        <type>Text</type>
        <label>Firm Name</label>
    </nameField>
    <description>Stores anonymous firm information for benchmarking purposes</description>
    <sharingModel>Private</sharingModel>
</CustomObject> 