force-app/main/default/objects/Benchmarking_Firm__c/fields/Data_Sharing_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Data_Sharing_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the firm has agreed to share anonymized data</description>
    <label>Data Sharing Agreement</label>
    <type>Checkbox</type>
</CustomField>