force-app/main/default/objects/Benchmarking_Firm__c/fields/Firm_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Firm_Identifier__c</fullName>
    <description>Unique identifier for anonymous firm tracking</description>
    <externalId>true</externalId>
    <label>Firm Identifier</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>