force-app/main/default/objects/Benchmarking_Firm__c/fields/Firm_Size_AUM_Range__c.field-meta.xml
<CustomField>
    <fullName>Firm_Size_AUM_Range__c</fullName>
    <description>Firm size range based on Assets Under Management (AUM)</description>
    <label>Firm Size (AUM Range)</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>$0-$100M</fullName>
            </value>
            <value>
                <fullName>$100M-$500M</fullName>
            </value>
            <value>
                <fullName>$500M-$1B</fullName>
            </value>
            <value>
                <fullName>$1B-$5B</fullName>
            </value>
            <value>
                <fullName>$5B+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 