force-app/main/default/objects/Benchmarking_Firm__c/fields/Firm_Structure__c.field-meta.xml
<CustomField>
    <fullName>Firm_Structure__c</fullName>
    <description>Organizational structure of the firm</description>
    <label>Firm Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Independent</fullName>
            </value>
            <value>
                <fullName>Wirehouse</fullName>
            </value>
            <value>
                <fullName>Bank-owned</fullName>
            </value>
            <value>
                <fullName>Insurance-owned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>