force-app/main/default/objects/Benchmarking_Firm__c/fields/Founding_Year__c.field-meta.xml
<CustomField>
    <fullName>Founding_Year__c</fullName>
    <description>Year the firm was founded</description>
    <label>Founding Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>