force-app/main/default/objects/Benchmarking_Firm__c/fields/Geographic_Region__c.field-meta.xml
<CustomField>
    <fullName>Geographic_Region__c</fullName>
    <description>Geographic region where the firm primarily operates</description>
    <label>Geographic Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Northeast</fullName>
            </value>
            <value>
                <fullName>Southeast</fullName>
            </value>
            <value>
                <fullName>Midwest</fullName>
            </value>
            <value>
                <fullName>Southwest</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>