force-app/main/default/objects/Benchmarking_Firm__c/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>Industry segment for benchmark segmentation</description>
    <label>Industry Segment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RIA</fullName>
            </value>
            <value>
                <fullName>Broker-Dealer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 