force-app/main/default/objects/Benchmarking_Firm__c/fields/Last_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Submission_Date__c</fullName>
    <description>Date of the firm's most recent benchmark data submission</description>
    <label>Last Submission Date</label>
    <type>Date</type>
</CustomField>